# oneshotmail

./: .gitignore  LICENSE  LICENSE.md  README.md  TODO.txt  contacts-template.csv  from-template.txt  main.py  message-template.txt  requirements.txt  setup.cfg  setup.py  subject-template.txt
oneshotmail/: __init__.py  __main__.py  console.py  mail.py
src/oneshotmail/: __init__.py  __main__.py  console.py  mail.py
src/oneshotmail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/oneshotmail_drulum.egg-info/: PKG-INFO  SOURCES.txt
tests/unit/: test_oneshot.py  test_oneshotconsole.py
