[metadata]
name = oneshotmail
version = 0.2
author = Calum Andrew Morrell
author_email = calum@drulum.com
description = A simple mailshot package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drulum/oneshotmail
project_urls =
    Bug Tracker = https://github.com/drulum/oneshotmail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    python-dotenv
python_requires = >=3.6

[options.packages.find]
where = src